Fix : Equal spacing between product summary sections

--- a/assets/css/unminified/main.css
+++ b/assets/css/unminified/main.css
@@ -1150,7 +1150,6 @@ body {
 
 .main-navigation {
   height: 100%;
-  -js-display: inline-flex;
   display: inline-flex;
 }
 
@@ -1828,7 +1827,6 @@ body {
 }
 
 .ast-builder-grid-row.ast-grid-center-col-layout-only {
-  -js-display: flex;
   display: flex;
   height: 100%;
   justify-content: center;
@@ -1896,7 +1894,6 @@ body {
  */
 .ast-logo-title-inline .ast-site-identity {
   padding: 1em 0;
-  -js-display: inline-flex;
   display: inline-flex;
   vertical-align: middle;
   align-items: center;
@@ -1943,7 +1940,7 @@ body {
 }
 
 .ahfb-svg-iconset {
-  -js-display: inline-flex;
+  display: -webkit-inline-box;
   display: inline-flex;
   align-self: center;
 }
@@ -2086,20 +2083,17 @@ body {
 }
 
 .ast-mobile-header-wrap .menu-toggle .mobile-menu-toggle-icon {
-  -js-display: inline-flex;
   display: inline-flex;
   align-self: center;
 }
 
 .ast-mobile-header-wrap .menu-toggle .mobile-menu-wrap {
-  -js-display: inline-flex;
   display: inline-flex;
   align-self: center;
   margin-left: 0.4em;
 }
 
 .ast-mobile-header-wrap .ast-button-wrap .menu-toggle.main-header-menu-toggle {
-  -js-display: flex;
   display: flex;
   align-items: center;
   width: auto;
@@ -2107,13 +2101,11 @@ body {
 }
 
 .menu-toggle .mobile-menu-toggle-icon {
-  -js-display: inline-flex;
   display: inline-flex;
   align-self: center;
 }
 
 .menu-toggle .mobile-menu-wrap {
-  -js-display: inline-flex;
   display: inline-flex;
   align-self: center;
   margin-left: 0.4em;
@@ -2121,14 +2113,12 @@ body {
 
 .ast-hfb-header .ast-button-wrap .menu-toggle .mobile-menu-wrap {
   align-items: center;
-  -js-display: flex;
   display: flex;
 }
 
 .ast-button-wrap .menu-toggle.main-header-menu-toggle {
   padding: .5em;
   align-items: center;
-  -js-display: flex;
   display: flex;
 }
 
@@ -2836,7 +2826,6 @@ input[type="color"]::-webkit-color-swatch {
 
 @media (min-width: 421px) {
   .single .post-navigation .nav-links {
-    -js-display: flex;
     display: flex;
   }
   .single .post-navigation .nav-previous,
@@ -3106,7 +3095,6 @@ input[type="color"]::-webkit-color-swatch {
 }
 
 .ast-flex {
-  -js-display: flex;
   display: flex;
   flex-wrap: wrap;
 }
@@ -3116,7 +3104,6 @@ input[type="color"]::-webkit-color-swatch {
 }
 
 .ast-inline-flex {
-  -js-display: inline-flex;
   display: inline-flex;
   align-items: center;
   flex-wrap: wrap;
